force-app/main/default/objects/EOM_Financial__c/EOM_Financial__c.object-meta.xml
<CustomObject>
    <label>EOM Financial</label>
    <nameField>
        <label>EOM Financial Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>EOM Financial</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>