force-app/main/default/objects/EOM_Financial__c/fields/Actual_Margin_percent__c.field-meta.xml
<CustomField>
    <fullName>Actual_Margin_percent__c</fullName>
    <label>Actual - Margin (%)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>