force-app/main/default/objects/EOM_Financial__c/fields/Actuals_Flights__c.field-meta.xml
<CustomField>
    <fullName>Actuals_Flights__c</fullName>
    <label>Actuals - Flights</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>