force-app/main/default/objects/EOM_Financial__c/fields/Actuals_Merchant_s__c.field-meta.xml
<CustomField>
    <fullName>Actuals_Merchant_s__c</fullName>
    <label>Actuals - Merchant/s</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>