force-app/main/default/objects/EOM_Financial__c/fields/Deal__c.field-meta.xml
<CustomField>
    <fullName>Deal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Deal</label>
    <referenceTo>Deal__c</referenceTo>
    <relationshipLabel>EOM Financial</relationshipLabel>
    <relationshipName>EOM_Financial</relationshipName>
    <type>Lookup</type>
</CustomField>