force-app/main/default/objects/EOM_Financial__c/fields/Deal_Name__c.field-meta.xml
<CustomField>
    <fullName>Deal_Name__c</fullName>
    <formula>Deal__r.title__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deal Name</label>
    <type>Text</type>
</CustomField>