force-app/main/default/objects/EOM_Financial__c/fields/Merchant_s__c.field-meta.xml
<CustomField>
    <fullName>Merchant_s__c</fullName>
    <label>Merchant(s)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>