force-app/main/default/objects/EOM_Financial__c/fields/Total_Base_Price__c.field-meta.xml
<CustomField>
    <fullName>Total_Base_Price__c</fullName>
    <label>Total Base Price ($)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>