force-app/main/default/objects/EOM_Financial__c/fields/TOTAL_DEAL_INCOME__c.field-meta.xml
<CustomField>
    <fullName>TOTAL_DEAL_INCOME__c</fullName>
    <label>TOTAL DEAL INCOME ($)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>